--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="btn_pick_colour_description">Pick a colour</string>
     <string name="add_page_title1">Add Notification</string>
     <string name="add_page_title2">Add Event</string>
+    <string name="edit_notification_page_title">Edit Notification</string>
     <string name="i_txt_notification_title">Title</string>
     <string name="i_txt_notification_description">Description</string>
 </resources>
