Fixed Dismiss Notification Functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Time Keeper</string>
-    <string name="btn_add_description">Add notification / event</string>
+    <string name="btn_add_description">Add Reminder / Event</string>
     <string name="btn_calendar_description">Go to calendar</string>
     <string name="btn_save_description">Save</string>
     <string name="btn_delete_description">Delete</string>
     <string name="btn_edit_description">Edit</string>
-    <string name="btn_pick_colour_description">Pick a colour</string>
-    <string name="add_page_title1">Add Notification</string>
+    <string name="btn_pick_colour_description">Pick a color</string>
+    <string name="add_page_title1">Add Reminder</string>
     <string name="add_page_title2">Add Event</string>
-    <string name="edit_notification_page_title">Edit Notification</string>
+    <string name="edit_notification_page_title">Edit Reminder</string>
     <string name="i_txt_notification_title">Title</string>
     <string name="i_txt_notification_description">Description</string>
     <string name="notification_channel_name">Time Keeper Notifications</string>
